--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "reactjs-alert": "^1.2.7",
+    "sweet-alert": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
